# BigInt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run_tests.yml
include/: bigint.hpp  constants.hpp  utils.hpp
include/bigint/: bigint.hpp  tests.hpp  utils.hpp
include/ocb/: bigint.hpp
include/ocb/bigint/: utils.hpp
src/: bigint.cpp  utils.cpp
src/bigint/: addition.cpp  arithmetic-overrides.cpp  arithmetic.cpp  bigint.cpp  bitwise-arithmetic-operators.cpp  comparison.cpp  division.cpp  logical.cpp  misc.cpp  modulo.cpp  multiplication.cpp  stream.cpp  subtraction.cpp  unary.cpp
tests/: addition.cpp  comparison.cpp  constructor.cpp  division.cpp  logical.cpp  misc.cpp  modulo.cpp  multiplication.cpp  stream.cpp  subtraction.cpp
